--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "electron-forge start",
     "electron": "electron .",
-    "package": "build"
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "license": "ISC",
   "build": {
@@ -16,7 +17,17 @@
     "files": "!build-assets${/*}"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.3.1",
+    "@electron-forge/maker-deb": "^7.3.1",
+    "@electron-forge/maker-rpm": "^7.3.1",
+    "@electron-forge/maker-squirrel": "^7.3.1",
+    "@electron-forge/maker-zip": "^7.3.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.3.1",
+    "@electron-forge/plugin-fuses": "^7.3.1",
     "electron": "^28.2.2",
     "electron-packager": "^17.1.2"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
   }
 }
