--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bubblewrap",
-  "productName": "BubbleWrap",
-  "author": "mooonbit",
+  "name": "WitchesAndButchers",
+  "productName": "WitchesAndButchers",
+  "author": "Lobosandia",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -13,7 +13,7 @@
   },
   "license": "ISC",
   "build": {
-    "appId": "com.mooonbit.BubbleWrap",
+    "appId": "mx.com.lobosandia.WitchesAndButchers",
     "files": "!build-assets${/*}"
   },
   "devDependencies": {
